# CI_lab

./: .gitignore  AutoEncoders.cpp  AutoEncoders.h  CMakeLists.txt  Input.cpp  Input.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  NeuronI.cpp  NeuronI.h  ProxyNeuron.cpp  ProxyNeuron.h  main.cpp  streams.h  utils.h
data/: iris-test-shufle.csv  iris-test.csv  iris-train-shufle.csv  iris-train.csv
presentation/: autoencoder.p  autoencoder_mlp.p  caltech-accuracy.p  caltech-loss.p  cifar-accuracy.p  cifar-loss.p  generate_plots.sh  mlp.p  mlp_results  mnist-accuracy.p  mnist-loss.p  prezentacja.tex  run_caltech_model_3-tag-loss.csv  run_caltech_model_3_eval-tag-accuracy.csv  run_caltech_model_3_eval-tag-loss.csv  run_caltech_model_5_eval-tag-accuracy.csv  run_caltech_model_7_eval-tag-accuracy.csv  run_caltech_model_9_eval-tag-accuracy.csv  run_cifar_model_3-tag-loss.csv  run_cifar_model_3_eval-tag-accuracy (1).csv  run_cifar_model_3_eval-tag-loss.csv  run_cifar_model_5_eval-tag-accuracy.csv  run_cifar_model_7_eval-tag-accuracy.csv  run_cifar_model_9_eval-tag-accuracy.csv  run_mnist-tag-loss.csv  run_mnist_eval-tag-accuracy.csv  run_mnist_eval-tag-loss.csv
